# DiscordWhitelist

./: .gitignore  README.md  pyproject.toml  simpleFileServer.py
autowl/: __init__.py  __main__.py  bot.py  config.py  discordBot.py  fileServer.py
autowl/Cogs/: Group.py  Whitelist.py  __init__.py
docs/: example.json
remoteAdmins/: vanilla.cfg
