[tool.poetry]
name = "discordwhitelist"
version = "0.1.0"
description = "Whitelist users in Squad via integration with Patreon bot on Discord"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
