[tool.poetry]
name = "discordwhitelist"
version = "0.1.0"
description = "Whitelist users in Squad via integration with Patreon bot on Discord"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.1.0"
jsonpickle = "^3.0.1"
mysql-connector-python = "^8.0.32"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
